# opengl-time

./: meson.build  run.sh
include/: model.h
src/: main.c  meson.build  model.c
src/shaders/: meson.build  shader.py
